force-app/main/default/objects/Building__c/fields/Lift__c.field-meta.xml
<CustomField>
    <fullName>Lift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift</label>
    <type>Checkbox</type>
</CustomField>